# GeophysicalTools

./: LICENSE.txt  README.md  electro.yml  electro_requirements.txt  gpr.yml  gpr_requirements.txt  seismic.yml  seismic_requirements.txt
emi/: appendixA.html  appendixA.md
emi/data/: gaia-2022-02-03.csv  gaia-2022-03-02.csv  gaia-2022-04-14.csv  long_emagpy_filt-gpr.csv
emi/data/output/: dfm-expl.csv
emi/notebooks/: EMIutils.py  nb1_forward.ipynb  nb2_real-transect.ipynb  nb3_real-area.ipynb
ert/data/: L1.csv  elecs1.txt  trecate.csv
ert/notebooks/: ERTutils.py  nb_2Dreal-resipy.ipynb  nb_2Dsynth-resipy.ipynb  nb_ert2D-synth-gimli.ipynb  nb_howERTworks.ipynb
ert/notebooks/.ipynb_checkpoints/: nb_ert2D-synth-gimli-checkpoint.ipynb
gpr/: gprpyGUI.md
gpr/data/: LID10006.DZT
gpr/notebooks/: nb0_gpr-theory.ipynb  nb1_gpr-basic.ipynb
srt/data/: collio1.sgt  geophones_l1.txt
srt/data/fb/: Shot1_fb.txt
srt/data/inv/: model-collio1.csv
srt/notebooks/: SRTutils.py  nb1_theory.ipynb  nb2_srt-forward.ipynb  nb3_srt-real.ipynb  paraDomain_1.bms  picking_nb.ipynb
srt/notebooks/.ipynb_checkpoints/: nb1_theory-Copy1-checkpoint.ipynb  nb_SRT-checkpoint.ipynb  picking_nb-checkpoint.ipynb
sw/: README.md  SWAutils.py  pyproject.toml  requirements.txt
sw/data/disp_curves/Shot1/: Shot1.txt  Shot1_1.txt
sw/data/inv/Shot1/: Shot1.txt
sw/data/inv/synth/: synth.txt
sw/data/inv/synth_2mod/: synth_2mod.txt
sw/notebooks/: SWAutils.py  interpDC.ipynb  nb0_sw-synth.ipynb  nb1_sw-analysis.ipynb  nb1_sw-analysis.py  nb2_sw-inversion.ipynb
(+9 files in other folders)
