[project]
name = "swa-tools"
version = "0.1.0"
description = "Surface Waves Analysis utilities"
authors = [
  { name="Alberto Carrera", email="alberto.carrera@unipd.it" }
]
dependencies = [
  # Core scientific stack
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "tqdm",
  "jupyter",

  # Seismic / waveform processing
  "obspy",

  # Surface wave analysis
  "disba[full]",
  "pycker",

  # Dispersion curve inversion
  "evodcinv",
  "stochopy",

  # Plotting utilities
  "seaborn"
]

